<resources>
    <string name="app_name">ustcwlt2</string>
    <string name="ip">IP</string>
    <string name="userid">用户名</string>
    <string name="password">密码</string>
    <string name="savepw">记住密码</string>
    <string name="login">登陆</string>
    <string name="out">出口</string>
    <string name="time">时长</string>
    <string name="connect">连接</string>
    <string name="disconnect">断开连接</string>
    <string name="status">状态</string>
    <string name="authority">权限</string>
    <string name="exit">退出登陆</string>
</resources>
